# CopilotKit

./: new.txt
examples/ag2/feature-viewer/: pnpm-lock.yaml
examples/ag2/starter/: pnpm-lock.yaml
examples/coagents-ai-researcher/ui/: pnpm-lock.yaml
examples/coagents-enterprise-crewai-crews/ui/: pnpm-lock.yaml
examples/coagents-qa-native/agent-js/: pnpm-lock.yaml
examples/coagents-qa-native/ui/: pnpm-lock.yaml
examples/coagents-qa-text/agent-js/: pnpm-lock.yaml
examples/coagents-qa/ui/: pnpm-lock.yaml
examples/coagents-research-canvas/agent-js/: pnpm-lock.yaml
examples/coagents-routing/agent-js/: pnpm-lock.yaml
examples/copilot-anthropic-pinecone/: pnpm-lock.yaml
examples/copilot-chat-with-your-data/: pnpm-lock.yaml
examples/copilot-form-filling/: pnpm-lock.yaml
examples/copilot-openaI-mongodb-atlas-vector-search/: package-lock.json  pnpm-lock.yaml
new_test_app_react/Backend/: Dockerfile  docker-compose.yml  gunicorn-cfg.py  new_apr_30.py  new_may28.py  nginx.conf  pyproject.toml  requirements.txt
new_test_app_react/Backend/agent/: agent.py  flask_integration.py  knowledge_base.py  prompts.py  state.py  tools.py
new_test_app_react/Backend/models/ARIMA/: ARIMA_Inventory_Management.pkl
new_test_app_react/Backend/models/CatBoost/: CatBoost_Customer_Returns.pkl
new_test_app_react/Backend/models/Ensemble/: Ensemble_Total_IB_Units.pkl
new_test_app_react/Backend/models/SARIMAX/: SARIMAX_Inbound_Exceptions_New.pkl  SARIMAX_WFS_China.pkl
new_test_app_react/Frontend/: package-lock.json  package.json  vite.config.ts
(+25 files in other folders)
